--- a/pom.xml
+++ b/pom.xml
@@ -28,4 +28,22 @@
     	<version>4.12</version>
     </dependency>
   </dependencies>
+
+	<build>
+	<plugins>
+	<plugin>
+	<groupId>org.codehaus.mojo</groupId>
+	<artifactId>cobertura-maven-plugin</artifactId>
+	<version>2.7</version>
+	<configuration>
+	<formats>
+	<!-- uncomment the following for HTML report, but we will be using Jenkins -->
+	<!-- <format>html</format> -->
+	<format>xml</format>
+	</formats>
+	</configuration>
+	</plugin>
+	</plugins>
+	</build>  
+	
 </project>
